<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SettingsMbox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="oobe_welcome">Welcome</string>
    <string name="oobe_language">Language</string>
    <string name="oobe_net">Network</string>
    <string name="oobe_screenadjust">Screen</string>
    <string name="button_skip">Skip</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="language_tip">Please choose your system language</string>
    <string name="position_help">Help: \n1.Press &quot;Enter Key&quot; to switch zoom in/zoom out; \n2.Press &quot;Direction Keys&quot; to change display position; \n3.Press &quot;Back Key&quot; to save and exit; \n4.Adjusted results will take effect after reboot; \n5.Press &quot;Menu Key&quot; to set default display position.</string>
    <string name="position_help_noreboot">Help: \n1.Press &quot;Up/Down Key&quot; to zoom in/zoom out untill one side black; \n2.Press &quot;Back Key&quot; to save; \n</string>
    <string name="txt_hint">Zoom In/Out</string>
    <string name="settings_top_network">Network </string>
    <string name="settings_top_display">Display </string>
    <string name="settings_top_expert">Advanced </string>

    <string name="wifi">Wi-Fi</string>
    <string name="ethernet">Ethernet</string>
    <string name="no_network">Please choose Wi-Fi or Ethernet connection</string>
    <string name="no_network_wifi_only"> No network connection</string>
    <string name="wifi_closed"> Wi-Fi connection closed</string>
    <string name="eth_connectd"> Ethernet connected</string>
    <string name="ip_address"> IP Address:</string>
    <string name="gateway"> Gateway</string>
    <string name="subnet_mask"> Subnet Mask</string>
    <string name="mac_address"> MAC address:</string>
    <string name="wifi_connectting"> Wi-Fi Connecting ... </string>
    <string name="wifi_input_password"> Input Password </string>
    <string name="wifi_connect"> Connect Now </string>
    <string name="wifi_ap_select"> Select your AP </string>
    <string name="wifi_connected"> Wi-Fi connected </string>
    <string name="wifi_name"> AP Name: </string>
    <string name="wifi_level"> Wi-Fi Strength </string>
    <string name="welcome">Welcome </string>
    <string name="welcome_tips">Thank you for using our devices </string>
    <string name="screen_setting_auto">HDMI auto-detection</string>
    <string name="screen_setting_output">Output mode setting</string>
    <string name="hide_staus_bar">Hide Status Bar </string>
    <string name="screen_adjust">Display Position</string>
    <string name="close">close</string>
    <string name="screen_keep">Start screen saver</string>
    <string name="settings_self">self select </string>
    <string name="settings_self_2">self select: </string>
    <string name="close_2">close</string>
    <string name="time_4"> 4min</string>
    <string name="select_default">default</string>
    <string name="time_8"> 8min </string>
    <string name="time_12">12min </string>
    <string name="password">Password</string>
    <string name="password_length_error">password is wrong!</string>
    <string name="refresh_now">Refresh Access Point List ...</string>
    <string name="system_setting">Settings</string>
    <string name="settings_other">Others</string>
    <string name="display_auto">HDMI auto-detection</string>
    <string name="display_auto_value">auto setting by system </string>
    <string name="display_self_setting">HDMI Output Mode Setting :</string>
    <string name="display_self_setting_value">self select:(HDMI 1080I 50HZ)</string>
    <string name="expert_wifi_direct">Miracast</string>
    <string name="expert_dlna">DLNA</string>
    <string name="expert_remote_control">Remote Control</string>
    <string name="expert_ipremote">Google TV Remote</string>
    <string name="city_select">Location</string>
    <string name="province">Shanghai</string>
    <string name="city">Shanghai</string>
    <string name="change_screen_request">Application request to change orientation</string>
    <string name="keep_screen_land">Keep landscape mode on home screen</string>
    <string name="voice_setting">Digital Audio Output</string>
    <string name="device_num"> Devices: XXX</string>
    <string name="device_version">Version: XXX</string>
    <string name="device_mac_address">MAC：XXX </string>
    <string name="system_update">System Update</string>
    <string name="more_settings">More Settings</string>
    <string name="factory">Factory: XXX</string>
    <string name="address">address: XXX</string>
    <string name="web_address"> Web: www.XXX</string>
    <string name="self_set">Self Setting</string>
    <string name="screen_tips_01">Press UP or DOWN arrow keys on your remote, or click +/- buttons on screen until the white borders appear on the edge of TV screen, Press RETURN key on your remote or right click mouse to apply the settings and return</string>
    <string name="oobe_screen_tips">Press UP or DOWN arrow keys on your remote, or click +/- buttons on screen until the white borders appear on the edge of TV screen</string>
    <string name="screen_close">Never</string>
    <string name="oobe_finish">Finish</string>
    <string name="output_popup_window_title">Output Modes</string>
    <string name="system_settings_title">SETTINGS</string>
    <string name="network_settings">Network</string>
    <string name="display_settings">Display</string>
    <string name="expert_settings">Advanced</string>
    <string name="other_settings">Other</string>
    <string name="voice_auto">Digital audio auto-detection</string>
    <string name="voices_settings_title">Digital Audio Output</string>
    <string name="voices_settings_pcm">PCM</string>
    <string name="voices_settings_spdif">SPDIF passthrough</string>
    <string name="voices_settings_hdmi">HDMI passthrough</string>
    <string name="dolby_settings">Dobly settings</string>
    <string name="dts_settings">DTS settings</string>
    <string name="dts_mul_asset">DTSHDMulAssetDecode</string>
    <string name="dolby_drc_enable">dolby DD+ DRC</string>
    <string name="dolby_drc_mode">set dolby DD+ DRC mode</string>
    <string name="dolby_drc_mode0">CUSTOM_0</string>
    <string name="dolby_drc_mode1">CUSTOM_1</string>
    <string name="dolby_drc_mode2">LINE</string>
    <string name="dolby_drc_mode3">RF</string>
    <string name="dts_downmix_mode0">Lo/Ro</string>
    <string name="dts_downmix_mode1">Lt/Rt</string>
    <string name="dts_downmix_mode">DTS downmix mode</string>
    <string name="dts_drc_scale">DTS DRC scale control</string>
    <string name="dts_dial_norm">DTS dial norm control</string>
    <string name="dts_trans_setting">DTSHDTransencodeSet</string>
    <string name="dts_trans_settings_title">DTS Transcoding Set</string>
    <string name="dts_trans_settings_0">0</string>
    <string name="dts_trans_settings_1">1</string>
    <string name="dts_trans_settings_2">2</string>
    <string name="select_wifi_tips"> Please select an access point to connect ... </string>
    <string name="connectting_wifi_tips">connecting ...</string>
    <string name="cec_control">CEC Control</string>
    <string name="citys">City List</string>
    <string name="provinces">Province List</string>
    <string name="cec_switch">CEC Switch</string>
    <string name="cec_play">One key Play </string>
    <string name="cec_power_off">One key power off</string>
    <string name="cec_language">auto change language </string>
    <string name="welcome_tips_01">Welcome to use our device.  </string>
    <string name="welcome_tips_02">Click \"Next\" to set up</string>
    <string name="temperature_start">温度：</string>
    <string name="temperature_end">：</string>
    <string name="ethernet_connectting">Ethernet Connecting ...</string>
    <string name="model_number">Model number :</string>
    <string name="firmware_version">Android version :</string>
    <string name="kernel_version">Kernel version :</string>
    <string name="build_number">Build number : </string>
    <string name="miracast_server_name">Device Name: </string>
    <string name="cvbs_setting">CVBS Mode Setting : </string>
    <string name="cvbs_480">CVBS 480 </string>
    <string name="str_separate_symbol">；</string>

	<string name="language_cn">简体中文</string>
	<string name="language_english">English</string>
	<string name="language_tw">繁體中文</string>
	<string name="ethernet_inplug_notice">Please plug in the Ethernet cable</string>
	<string name="passwork_input_notice">Please input password first</string>
	<string name="ethernet_error">Ethernet disconnected!</string>
	<string name="display_confirm">Do you want to keep these display settings?</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="dialog_title">Change to default output mode ?</string>
    <string name="show_password">Show Password</string>
    <string name="connect_error_tips">Connection failed</string>
    <string name="str_shanghai">上海</string>
</resources>
