<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >


	<TextView
		android:id="@+id/dialog_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/display_confirm"
		android:textColor="@android:color/white"
		android:textSize="25dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/cancle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancle"
	        android:textSize="25dp"
	        android:textColor="#FFFFFF"
			android:background="@drawable/dialog_button_select"/>


	    <Button
	        android:id="@+id/ok"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/ok"
	        android:textSize="25dp" 
	        android:textColor="#FFFFFF"
			android:background="@drawable/dialog_button_select"/>

    </LinearLayout>
	

</LinearLayout>
