<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bk"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dts_settings"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/dts_downmix_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_downmix_mode"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_downmix_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/dolby_drc_mode2"
            android:textColor="#012267"
            android:textSize="24dp"
            android:textStyle="bold"/>
    </RelativeLayout>

     <RelativeLayout
        android:id="@+id/dts_drc_scale"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_drc_scale"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_drc_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on" />
    </RelativeLayout>

	<RelativeLayout
        android:id="@+id/dts_dial_norm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_dial_norm"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_dial_norm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on" />
    </RelativeLayout>


</LinearLayout>

