<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bk"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dts_trans_settings_title"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/dts_trans_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_trans_settings_0"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_trans_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/current_unselect" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dts_trans_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_trans_settings_1"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_trans_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/current_unselect" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dts_trans_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/voice_item"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/dts_trans_settings_2"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_trans_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/current_unselect" />
    </RelativeLayout>

</LinearLayout>