<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:id="@+id/oobe_creen_tip_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/oobe_screen_tips"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="240dp"
            android:layout_marginRight="240dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/oobe_img_progress_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oobe_creen_tip_01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_per_100" >
        </ImageView>

        <LinearLayout
            android:id="@+id/oobe__img_hint_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oobe_creen_tip_01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="114dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/oobe_img_num_hundred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_num1" >
            </ImageView>

            <ImageView
                android:id="@+id/oobe_img_num_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_num0" >
            </ImageView>

            <ImageView
                android:id="@+id/oobe_img_num_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_num0" >
            </ImageView>

            <ImageView
                android:id="@+id/oobe_img_per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/per" >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oobe_creen_tip_01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="224dp" >

            <ImageButton
                android:id="@+id/oobe_btn_position_zoom_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/img_progress_bg"
                android:background="@drawable/button_minus"
                android:focusable="false" >
            </ImageButton>

            <ImageButton
                android:id="@+id/oobe_btn_position_zoom_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/img_progress_bg"
                android:focusable="false"
                android:background="@drawable/button_plus" >
            </ImageButton>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button_screen_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_previous"
            android:textColor="@android:color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/button_screen_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_next"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </LinearLayout>

</LinearLayout>